--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,5 @@ overflow-checks = true
 members = [
     "marble-marketplace-contract",
     "test-token",
+    "marble-phygital-marketplace-contract"
 ]
